objects/Candidates__c.object
<CustomObject>
    <label>Candidates</label>
    <nameField>
        <label>Candidates Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High School</fullName>
                </value>
                <value>
                    <fullName>College</fullName>
                </value>
                <value>
                    <fullName>Bachelors Degree</fullName>
                </value>
                <value>
                    <fullName>Masters Degree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Positions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Positions</label>
        <referenceTo>Positions__c</referenceTo>
        <relationshipLabel>Candidates</relationshipLabel>
        <relationshipName>Candidates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_number__c</fullName>
        <label>Phone number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Upload_Image__c</fullName>
        <label>Upload Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Currently_Employed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currently Employed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Years_of_Experience__c</fullName>
        <label>Years of Experience</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Employers_Name__c</fullName>
        <label>Current Employers Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_to_work_in_USA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorized to work in USA</label>
        <type>Checkbox</type>
    </fields>
    <validationRules>
        <fullName>DOB_should_not_be_more_than_current_date</fullName>
        <active>true</active>
        <errorConditionFormula>Date_of_Birth__c  &lt; TODAY()</errorConditionFormula>
        <errorMessage>DOB should not be more than current date</errorMessage>
    </validationRules>
</CustomObject>